# stria-website

./: .commitlintrc.json  .cwv-check.mjs  .deployment-failure-count.json  .gitignore  .releaserc.json  AUTONOMOUS_ENGINE_SUMMARY.md  CONTRIBUTING.md  META_MONITORING_CODE_REVIEW.md  README.md  analyze-audit.cjs  audit-report-2026-06-12.md  audit-results-2026-06-12.json  audit-results.json  batch_infer_full.py  continuous_learning_dataset.jsonl  deployment-health-report-2026-06-12.md  evaluate_trace.py  hot_swap.py  index.html  metrics_log.jsonl  mlx_fastapi_server.py  monitor-comprehensive.cjs  monitor-deployment-health.cjs  package-lock.json  package.json  raw-output.txt  stats.html  trace_core.darwin-arm64.node  trace_telemetry.jsonl  trace_telemetry_mock.py  train_trigger.py  tsconfig.prototype.json  vite.config.ts  wrangler.jsonc
.devin/: config.local.json
.github/: CODEOWNERS  dependabot.yml
.husky/: pre-commit
examples/: identity.yaml  (+2 more)
trace-core/: .gitignore  Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json  simulation_results.json  trace-core-0.1.0.tgz  trace_core.darwin-arm64.node
trace-core/benches/: benchmarks.rs
trace-core/examples/: data_simulation.rs
trace-core/src/: canonical_json.rs  evidence.rs  hash.rs  lib.rs  policy.rs  redact.rs  types.rs  usage_intel.rs
trace-core/stria-ingestion-pipeline/src/stria_ingestion/core/: __init__.py  models.py
trace-core/ts-wrapper/: index.ts  package-lock.json  package.json  tsconfig.json
trace-core/ts-wrapper/stria-ingestion-pipeline/src/stria_ingestion/trace/: __init__.py
(+348 files in other folders)
