[package]
name = "trace-core"
version = "0.1.0"
edition = "2021"
description = "High-performance core for Trace: canonical JSON, hashing, policy evaluation, usage intelligence"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# N-API bindings for Node.js
napi = { version = "2.14", features = ["napi4", "napi5", "napi6", "napi7", "napi8", "serde_json"] }
napi-derive = "3.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Crypto
sha2 = "0.10"
ring = "0.17"
hex = "0.4"

# Regex for usage intelligence
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Benchmarking
criterion = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.8"
serde_json = "1.0"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3